[tool.poetry]
name = "5thsrd"
version = "0.1.0"
description = ""
authors = ["John Orndorff"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs-multilang = "^0.1.3"
Markdown = "^3.3.4"
mkdocs-simple-hooks = "^0.1.3"
mkdocs-section-index = "^0.3.0"
csscompressor = "^0.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
